# PortSlayer

./: .gitignore  Cargo.toml  LICENSE  README.md  mad.txt  old_port_scanner.rs  old_tray.rs  out.txt  test_parse  test_parse.rs  test_ss  test_ss.rs
examples/: cli.rs
scripts/: install.sh  uninstall.sh
src/: bin_test.rs  debug_scan.rs  main.rs  port_scanner.rs  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
ui/: index.css  index.html  index.js
