[package]
name = "portslayer"
version = "1.0.0"
edition = "2021"
authors = ["Luis"]
description = "⚔️ PortSlayer - System tray app to monitor and kill open ports on Linux"
license = "MIT"
repository = "https://github.com/artur282/portslayer"
keywords = ["ports", "network", "system-tray", "linux", "monitoring"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# System tray para Linux (StatusNotifierItem / AppIndicator)
ksni = "0.2"

# Logging estructurado
log = "0.4"
env_logger = "0.11"

# Syscalls POSIX: setsid() para desengancharse de la terminal al iniciar
nix = { version = "0.29", default-features = false, features = ["process"] }

[profile.release]
# Optimizaciones para binario más pequeño y rápido
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
