[package]
name = "puertos-guard"
version = "0.1.0"
description = "Manage active ports and kill processes"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
procfs = "0.16"
sysinfo = "0.30"
libc = "0.2"

[features]
# by default Tauri runs in production mode
# however, for development we want to keep the devtools enabled
custom-protocol = ["tauri/custom-protocol"]
